# hacktivity

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  PLAN.md  README.md  TODO.md  execute-instructions.md  glance.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: leyline.yml  test.yml
MagicMock/: glance.md
MagicMock/get_config().cache.directory/: glance.md
__pycache__/: glance.md
hacktivity/: __init__.py  __main__.py  glance.md
hacktivity.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  glance.md  requires.txt  top_level.txt
hacktivity/__pycache__/: glance.md
hacktivity/core/: __init__.py  ai.py  cache.py  chunking.py  circuit_breaker.py  commits.py  config.py  github.py  glance.md  graphql.py  logging.py  parallel.py  rate_limiter.py  repos.py  state.py
hacktivity/prompts/: glance.md  retro.md  standup.md  weekly.md
tests/: __init__.py  conftest.py  glance.md  test_ai_batch.py  test_cache.py  test_chunking.py  test_circuit_breaker.py  test_circuit_breaker_integration.py  test_commits.py  test_config.py  test_github.py  test_graphql.py  test_init_command.py  test_installation.py  test_large_scale_integration.py  test_multi_cache.py  test_output_format.py  test_parallel.py  test_parallel_integration.py  test_prompt_loading.py  test_rate_limiter.py  test_readme_validation.py  test_repos.py  test_state.py
thinktank_20250613_160540_000625001/: gemini-2.5-flash-preview-05-20.md  gemini-2.5-pro-preview-06-05-synthesis.md  gpt-4.1.md  o3.md  o4-mini.md  openrouter-deepseek-deepseek-chat-v3-0324.md  openrouter-deepseek-deepseek-prover-v2.md  openrouter-deepseek-deepseek-r1-0528.md  openrouter-meta-llama-llama-4-maverick.md  openrouter-meta-llama-llama-4-scout.md  openrouter-x-ai-grok-3-beta.md  openrouter-x-ai-grok-3-mini-beta.md
thinktank_20250613_192024_000860001/: gemini-2.5-flash-preview-05-20.md  gemini-2.5-pro-preview-06-05-synthesis.md  gemini-2.5-pro-preview-06-05.md  gpt-4.1.md  o3.md  o4-mini.md  openrouter-deepseek-deepseek-prover-v2.md  openrouter-meta-llama-llama-4-maverick.md  openrouter-meta-llama-llama-4-scout.md  openrouter-x-ai-grok-3-beta.md  openrouter-x-ai-grok-3-mini-beta.md
(+15 files in other folders)
